Fix #56618 - add missing border to settings search box in light themes

--- a/src/vs/workbench/parts/preferences/browser/media/settingsEditor2.css
+++ b/src/vs/workbench/parts/preferences/browser/media/settingsEditor2.css
@@ -39,6 +39,10 @@
 	margin-right: 7px;
 }
 
+.vs .settings-editor > .settings-header > .search-container > .suggest-input-container {
+	border: 1px solid #ddd;
+}
+
 .settings-editor > .settings-header > .settings-header-controls {
 	height: 32px;
 	display: flex;
